--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/Astronomy.jpg" style="width:280px; height:280px; object-fit: cover;">
+								<img src="images/hd169.png" style="width:280px; height:280px; object-fit: cover;">
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
 								<p>
-									Position <br> Institution
+									Postdoc <br> at MPIA, Germany
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
@@ -109,7 +109,7 @@
 								<b>Education:</b>
 							</p>
 							<p>
-								<b>Research Interests:</b>
+								<b>Research Interests: I do protoplanetary discs.</b>
 							</p>
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
@@ -154,10 +154,10 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
+								<b>Email: iahammond (@) mpia (dot) de</b>
 							</p>
 							<p> 
-								<b>Address:</b> 
+								<b>Address: MPIA Heidelberg</b>
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
