--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 	<!-- 	This is the "Head" of the HTML document.
 		It contains information that isn't displayed on the actual page, but is useful
 		for the web browser when loading the page	
@@ -40,7 +40,7 @@
 							<div class="inner">
 								<!-- Here is a heading where you can put your name -->
 								<h1>
-									Iain Hammond
+									Dr. Iain Hammond
 								</h1>
 								<!-- 	Here is an image where you can put a picture of you. 
 									You can change the width and height attributes below to change how large
@@ -60,6 +60,23 @@
 									<!-- Note you will want to change where this points to! -->
 									<a href="images/Astronomy.jpg" target="_blank">Curriculum Vitae</a>
 								</p>
+
+								<p>
+								<a
+										id="cy-effective-orcid-url"
+										class="underline"
+										 href="https://orcid.org/0000-0003-1502-4315"
+										 target="orcid.widget"
+										 rel="me noopener noreferrer"
+										 style="vertical-align: top">
+										 <img
+											src="https://orcid.org/sites/default/files/images/orcid_16x16.png"
+											style="width: 1em; margin-inline-start: 0.5em"
+											alt="ORCID iD icon"/>
+										  https://orcid.org/0000-0003-1502-4315
+										</a>
+								</p>
+
 							</div>
 						</div>
 						<!-- This is the navigation menu -->
@@ -106,7 +123,7 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:</b>
+								<b>Education: Ph.D. at Monash University, Australia</b>
 							</p>
 							<p>
 								<b>Research Interests: I do protoplanetary discs.</b>
@@ -140,13 +157,10 @@
 								<img src="images/pic03.jpg" alt=""/>
 							</span>
 							<p>
-								<b>Teaching:</b>
+								<b>Teaching: Second and third year Astronomy & Astrophysics at Monash University </b>
 							</p>
 							<p>
-								<b>Outreach:</b>
-							</p>
-							<p>
-								<b>Equity & Inclusion:</b>
+								<b>Outreach: Talks with Nova and in PhD</b>
 							</p>
 						</article>
 
@@ -166,29 +180,29 @@
 							-->
 							<ul class="icons">
 								<!-- The Twitter icon -->
-								<li>
-									<!-- 	Note that you need to change the link to point to your page.
-										Replace "#" with your Twitter profile page.
-									-->
-									<a href="#" class="icon fa-twitter">
-										<span class="label">Twitter</span>
-									</a>
-								</li>
-								<!-- The Facebook icon -->
-								<li>
-									<a href="#" class="icon fa-facebook">
-										<span class="label">Facebook</span>
-									</a>
-								</li>
-								<!-- The Instagram icon -->
-								<li>
-									<a href="#" class="icon fa-instagram">
-										<span class="label">Instagram</span>
-									</a>
-								</li>
+<!--								<li>-->
+<!--									&lt;!&ndash; 	Note that you need to change the link to point to your page.-->
+<!--										Replace "#" with your Twitter profile page.-->
+<!--									&ndash;&gt;-->
+<!--									<a href="#" class="icon fa-twitter">-->
+<!--										<span class="label">Twitter</span>-->
+<!--									</a>-->
+<!--								</li>-->
+<!--								&lt;!&ndash; The Facebook icon &ndash;&gt;-->
+<!--								<li>-->
+<!--									<a href="#" class="icon fa-facebook">-->
+<!--										<span class="label">Facebook</span>-->
+<!--									</a>-->
+<!--								</li>-->
+<!--								&lt;!&ndash; The Instagram icon &ndash;&gt;-->
+<!--								<li>-->
+<!--									<a href="#" class="icon fa-instagram">-->
+<!--										<span class="label">Instagram</span>-->
+<!--									</a>-->
+<!--								</li>-->
 								<!-- The GitHub icon -->
 								<li>
-									<a href="#" class="icon fa-github">
+									<a href="https://github.com/IainHammond" class="icon fa-github">
 										<span class="label">GitHub</span>
 									</a>
 								</li>
@@ -211,7 +225,7 @@
 						<!-- 	You can change "Untitled" to your name to show everyone that
 							this is your work.
 						-->
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Iain Hammond. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
